rebuildd (0.2.1) UNRELEASED; urgency=low

  * Add --download-only to apt-get source by default
    and put only one -q
  * If a job is building, don't allow to add it
  * Rewrite rebuildd-job stats function with SQL,
    very very very very very very very very faster
  * Add headers and footers to build logs
  * Dont't try to resend old mails, otherwise we send it
    twice sometimes.
  * Fix a bug when database is empty in rebuildd-job stats
  * Limit job searching to max_jobs to be more faster

 -- Julien Danjou <acid@debian.org>  Tue, 07 Aug 2007 16:04:53 +0200

rebuildd (0.2.0) unstable; urgency=low

  * Upload to Debian (Closes: #432302)
  * Stock builder hostname in job table
  * Add new max_jobs config var, used to load max_jobs new jobs
    This adds a new state WAIT_LOCKED for locking jobs handled by a build.
  * Handle SIGINT like SIGTERM
  * Don't stock build_time, stock build_start and build_end
  * Move http server outside, and standalone
  * Create unit tests
  * Init scripts now use LSB
  * Rewrite Web server and interface with web.py
    With new templates, thanks Clément Danjou (my little bro)
    for them. :-) I still suck with HTML.

 -- Julien Danjou <acid@debian.org>  Tue, 10 Jul 2007 10:36:33 +0200

rebuildd (0.1.0) unstable; urgency=low

  * Initial release

 -- Julien Danjou <acid@debian.org>  Sat, 07 Jul 2007 14:44:58 +0200
