@@ -10,8 +10,9 @@ rebuildd (0.2.1) UNRELEASED; urgency=low
     twice sometimes.
   * Fix a bug when database is empty in rebuildd-job stats
   * Limit job searching to max_jobs to be more faster
+  * Fix a bug with event/lock, which cancel all jobs at once
 
- -- Julien Danjou <acid@debian.org>  Tue, 07 Aug 2007 16:04:53 +0200
+ -- Julien Danjou <acid@debian.org>  Tue, 07 Aug 2007 20:17:14 +0200
 
 rebuildd (0.2.0) unstable; urgency=low
 
